Tela1 (HTML fixo) finalizada

--- a/index.html
+++ b/index.html
@@ -9,9 +9,42 @@
         <title>BuzzQuizz</title>
     </head>
     <body>
-        <header>BuzzQuizz</header>
+        <header class="Logo">BuzzQuizz</header>
 
-     
-       <script src="script.js"></script>
+        <div class="tela1-inicial">
+            <article>
+                <p>Você não criou nenhum <br> quizz ainda :(</p>
+                <button>Criar Quizz</button>
+            </article>
+            <section class="quizz-usuario">
+
+            </section>
+            <section class="quizz-servidor">
+                <header>Todos os Quizzes</header>
+                <div class="todos-quizzes">
+                    <figure>
+                        <figcaption>Acerte os personagens corretos dos Simpsons e prove seu amor!</figcaption>
+                    </figure>
+                    <figure>
+                        <figcaption>Acerte os personagens corretos dos Simpsons e prove seu amor!</figcaption>
+                    </figure>
+                    <figure>
+                        <figcaption>Acerte os personagens corretos dos Simpsons e prove seu amor!</figcaption>
+                    </figure>
+                    <figure>
+                        <figcaption>Acerte os personagens corretos dos Simpsons e prove seu amor!</figcaption>
+                    </figure>
+                    <figure>
+                        <figcaption>Acerte os personagens corretos dos Simpsons e prove seu amor!</figcaption>
+                    </figure>
+                    <figure>
+                        <figcaption>Acerte os personagens corretos dos Simpsons e prove seu amor!</figcaption>
+                    </figure>
+                </div>
+            </section>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
