Tela 2 completamente finalizada

--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
                 <div class="todos-quizzes"></div>
             </section>
         </div>
-
         <div class="tela2-exibir_quizz oculto">
             <header class="titulo-do-quizz"></header>
-            <main>
-                
-            </main>
+            <main></main>
             <footer class="final">
-                <button>Reiniciar Quizz</button>
-                <button>Voltar pra home</button>
+                <button onclick="reiniciarQuizz()">
+                    Reiniciar Quizz
+                </button>
+                <button onclick="voltarPraTelaInicial()">
+                    Voltar pra home
+                </button>
             </footer>
         </div>
 
