Exibição dinamica dos Quizzes do usuario

--- a/index.html
+++ b/index.html
@@ -22,33 +22,7 @@
                     <h1>Seus Quizzes</h1>
                     <ion-icon name="add-circle" onclick="irPraTelaDeCriaçãoDoQuizz()"></ion-icon>
                 </header>
-                <div class="seus-quizzes">
-                    <figure>
-                        <img src="http://2.bp.blogspot.com/-XSK_vuuo1Mk/UgfApfkSntI/AAAAAAAAAPQ/3Rx1KsPFBFs/s1600/13430685407.jpg" alt="quizz">
-                        <div class="gradiente"></div>
-                        <figcaption>Titulo do quizz</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="http://2.bp.blogspot.com/-XSK_vuuo1Mk/UgfApfkSntI/AAAAAAAAAPQ/3Rx1KsPFBFs/s1600/13430685407.jpg" alt="quizz">
-                        <div class="gradiente"></div>
-                        <figcaption>Titulo do quizz</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="http://2.bp.blogspot.com/-XSK_vuuo1Mk/UgfApfkSntI/AAAAAAAAAPQ/3Rx1KsPFBFs/s1600/13430685407.jpg" alt="quizz">
-                        <div class="gradiente"></div>
-                        <figcaption>Titulo do quizz</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="http://2.bp.blogspot.com/-XSK_vuuo1Mk/UgfApfkSntI/AAAAAAAAAPQ/3Rx1KsPFBFs/s1600/13430685407.jpg" alt="quizz">
-                        <div class="gradiente"></div>
-                        <figcaption>Titulo do quizz</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="http://2.bp.blogspot.com/-XSK_vuuo1Mk/UgfApfkSntI/AAAAAAAAAPQ/3Rx1KsPFBFs/s1600/13430685407.jpg" alt="quizz">
-                        <div class="gradiente"></div>
-                        <figcaption>Titulo do quizz</figcaption>
-                    </figure>
-                </div>
+                <div class="seus-quizzes"></div>
             </section>
 
             <section class="quizz-servidor">
