--- a/index.html
+++ b/index.html
@@ -22,37 +22,7 @@
                     <h1>Seus Quizzes</h1>
                     <ion-icon name="add-circle" onclick="irPraTelaDeCriaçãoDoQuizz()" data-identifier="create-quizz"></ion-icon>
                 </header>
-<<<<<<< HEAD
-                <div class="seus-quizzes" data-identifier="user-quizzes">
-                    <figure>
-                        <img src="http://2.bp.blogspot.com/-XSK_vuuo1Mk/UgfApfkSntI/AAAAAAAAAPQ/3Rx1KsPFBFs/s1600/13430685407.jpg" alt="quizz">
-                        <div class="gradiente"></div>
-                        <figcaption>Titulo do quizz</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="http://2.bp.blogspot.com/-XSK_vuuo1Mk/UgfApfkSntI/AAAAAAAAAPQ/3Rx1KsPFBFs/s1600/13430685407.jpg" alt="quizz">
-                        <div class="gradiente"></div>
-                        <figcaption>Titulo do quizz</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="http://2.bp.blogspot.com/-XSK_vuuo1Mk/UgfApfkSntI/AAAAAAAAAPQ/3Rx1KsPFBFs/s1600/13430685407.jpg" alt="quizz">
-                        <div class="gradiente"></div>
-                        <figcaption>Titulo do quizz</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="http://2.bp.blogspot.com/-XSK_vuuo1Mk/UgfApfkSntI/AAAAAAAAAPQ/3Rx1KsPFBFs/s1600/13430685407.jpg" alt="quizz">
-                        <div class="gradiente"></div>
-                        <figcaption>Titulo do quizz</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="http://2.bp.blogspot.com/-XSK_vuuo1Mk/UgfApfkSntI/AAAAAAAAAPQ/3Rx1KsPFBFs/s1600/13430685407.jpg" alt="quizz">
-                        <div class="gradiente"></div>
-                        <figcaption>Titulo do quizz</figcaption>
-                    </figure>
-                </div>
-=======
-                <div class="seus-quizzes"></div>
->>>>>>> 40551a9c51e7eb796e13133ecc2f4ce7fb41f4b2
+                <div class="seus-quizzes" data-identifier="user-quizzes"></div>
             </section>
 
             <section class="quizz-servidor">
@@ -82,7 +52,7 @@
                 <input type="text" class="levelNumber" placeholder="Quantidade de níveis do quizz">
             </div>
             <button class="proceedToQuestions" onclick="getBasicInfoValues(); setTimeout(createQuestions(),1500)">Prosseguir pra criar perguntas</button> 
-   
+
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
